Fixed that filter can scroll out of screen bound

--- a/app/assets/stylesheets/application/filter_panel.css.sass
+++ b/app/assets/stylesheets/application/filter_panel.css.sass
@@ -1,6 +1,8 @@
 #filter-panel
   border-left: 1px solid #c7c7c7
   background: #e8e8e8
+  height: 100%
+  overflow: hidden
   ul#switches
     margin: 0
     padding: 0
